Sorted the listdir

--- a/Data_Read.ipynb
+++ b/Data_Read.ipynb
@@ -18,6 +18,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def key_func(x):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -35,10 +47,10 @@
     "\n",
     "listOfLectures = []\n",
     "\n",
-    "for lec in os.listdir(frames_dir):\n",
+    "for lec in sorted(os.listdir(frames_dir)):\n",
     "    frame_list = []\n",
     "    lec_path = os.path.join(frames_dir,lec)\n",
-    "    for frame in os.listdir(lec_path):\n",
+    "    for frame in sorted(os.listdir(lec_path)):\n",
     "        frame_list.append([os.path.join(lec_path,frame),])\n",
     "    listOfLectures.append(frame_list)\n",
     "\n",
@@ -54,7 +66,7 @@
    "outputs": [],
    "source": [
     "lec_num = 0\n",
-    "for csv in os.listdir(labels_dir):\n",
+    "for csv in sorted(os.listdir(labels_dir)):\n",
     "    csv_path = os.path.join(labels_dir,csv)\n",
     "    with open(csv_path,'r') as input:\n",
     "        data = input.read()\n",
@@ -154,7 +166,7 @@
     "        # j is frame nu\"mber\n",
     "        frame_params = []\n",
     "        f_info = listOfLectures[i][j]\n",
-    "        print(f_info)\n",
+    "        \n",
     "        f_info_next = listOfLectures[i][j+1]\n",
     "        # As of now , list of form [Path,missOrHit]\n",
     "        im = cv2.imread(f_info[0],0) # Grayscale image of frame\n",
@@ -171,9 +183,9 @@
     "        hd = np.sum(np.abs(im_h-im_nh))\n",
     "        frame_params.append(hd)\n",
     "#         print(frame_params)\n",
-    "        print(f_info)\n",
+    "        \n",
     "        f_info.append(frame_params)\n",
-    "        print(f_info)\n",
+    "        \n",
     "        f_info.append(X[j])\n",
     "        print(f_info)\n",
     "        break        \n",
