Transforming the input to the format you need

--- a/Data_Read.ipynb
+++ b/Data_Read.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -18,19 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def key_func(x):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -59,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -78,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# listOfLectures : list of lectures where each lecture contains a list of form [frame_number, whether hit or miss ]\n",
@@ -96,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -129,79 +119,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['C:\\\\Users\\\\Siddharth Khera\\\\Dropbox\\\\This Sem\\\\ELL888 - Deep Learning\\\\assn2\\\\Dataset\\\\frames\\\\lec1\\\\l1s00000.jpg', 0]\n",
-      "['C:\\\\Users\\\\Siddharth Khera\\\\Dropbox\\\\This Sem\\\\ELL888 - Deep Learning\\\\assn2\\\\Dataset\\\\frames\\\\lec1\\\\l1s00000.jpg', 0]\n",
-      "['C:\\\\Users\\\\Siddharth Khera\\\\Dropbox\\\\This Sem\\\\ELL888 - Deep Learning\\\\assn2\\\\Dataset\\\\frames\\\\lec1\\\\l1s00000.jpg', 0, [13095882, 0.9908933217692975, 38638.0]]\n",
-      "['C:\\\\Users\\\\Siddharth Khera\\\\Dropbox\\\\This Sem\\\\ELL888 - Deep Learning\\\\assn2\\\\Dataset\\\\frames\\\\lec1\\\\l1s00000.jpg', 0, [13095882, 0.9908933217692975, 38638.0], array([-10702.11322391,   -780.05517163,     51.03489705,  -2792.60960977,\n",
-      "          738.34880268])]\n"
+      "lec no.0\n",
+      "lec no.1\n",
+      "lec no.2\n",
+      "lec no.3\n",
+      "lec no.4\n",
+      "lec no.5\n",
+      "lec no.6\n",
+      "lec no.7\n",
+      "lec no.8\n",
+      "lec no.9\n",
+      "lec no.10\n",
+      "lec no.11\n",
+      "lec no.12\n",
+      "lec no.13\n",
+      "lec no.14\n"
      ]
     }
    ],
    "source": [
+    "lectureFeatureList =[]\n",
+    "\n",
     "for i in range(len(listOfLectures)):\n",
     "    # i is lec number\n",
-    "    \n",
-    "    pca = PCA(n_components=5)\n",
+    "    pca_comp = 5\n",
+    "    pca = PCA(n_components=pca_comp)\n",
     "    sample_image = cv2.imread(listOfLectures[i][0][0],0)\n",
     "    X= sample_image.ravel().reshape((1,-1))\n",
-    "#     print(X.shape)\n",
     "    for j in range(1,len(listOfLectures[i])-1):\n",
     "        im = cv2.imread(listOfLectures[i][j][0],0).ravel().reshape((1,-1))\n",
-    "#       print(im.shape)\n",
     "        X = np.vstack((X,im))\n",
     "    pca.fit(X)\n",
     "    X = pca.transform(X)\n",
-    "        \n",
-    "#     print(X.shape)\n",
-    "\n",
     "    \n",
+    "    #### Update it manually to number of features + 1\n",
+    "    lectureArray = np.ones((X.shape[0],3 + 1),dtype=np.float)\n",
+    "    \n",
+    "    f_info_next = listOfLectures[i][0]\n",
+    "    im_n = cv2.imread(f_info_next[0],0)\n",
     "    for j in range(len(listOfLectures[i])-1):\n",
-    "        # j is frame nu\"mber\n",
+    "\n",
     "        frame_params = []\n",
-    "        f_info = listOfLectures[i][j]\n",
+    "        f_info = f_info_next\n",
     "        \n",
     "        f_info_next = listOfLectures[i][j+1]\n",
     "        # As of now , list of form [Path,missOrHit]\n",
-    "        im = cv2.imread(f_info[0],0) # Grayscale image of frame\n",
+    "        im = im_n # Grayscale image of frame\n",
     "        im_n = cv2.imread(f_info_next[0],0) # Grayscale image of frame\n",
     "        \n",
     "        sad = np.sum(np.abs(im_n-im))\n",
-    "        frame_params.append(sad)\n",
+    "        lectureArray[j][0] = sad\n",
     "        \n",
     "        ecr = ECR(im,im_n,im.shape[1],im.shape[0])\n",
-    "        frame_params.append(ecr)\n",
+    "        lectureArray[j][1] = ecr\n",
     "        \n",
     "        im_h = cv2.calcHist([im],[0],None,[256],[0,256])\n",
     "        im_nh = cv2.calcHist([im_n],[0],None,[256],[0,256])\n",
     "        hd = np.sum(np.abs(im_h-im_nh))\n",
-    "        frame_params.append(hd)\n",
-    "#         print(frame_params)\n",
+    "        lectureArray[j][2] = hd\n",
     "        \n",
-    "        f_info.append(frame_params)\n",
+    "        lectureArray[j][3] = int(f_info[1])\n",
     "        \n",
-    "        f_info.append(X[j])\n",
-    "        print(f_info)\n",
-    "        break        \n",
-    "    break\n",
-    "        \n",
+    "#         print(f_info)\n",
+    "    x_normed = (x - x.min(0)) / x.ptp(0)\n",
+    "    lectureArray = np.hstack((X,lectureArray))\n",
+    "    lectureArray = (lectureArray - lectureArray.min(0)) / lectureArray.ptp(0)\n",
+    "    lectureFeatureList.append(lectureArray)\n",
+    "#     print(lectureArray[:5])\n",
+    "    print(\"lec no.\" +str(i))\n",
     "        "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# You can use lectureFeatureList now\n",
+    "# It is a list of 35 lecs which are numpy arrays\n",
+    "# Each array has dimension (no. of frames X (pca_comp + 3 for features engineered + 1 for hitOrMiss))\n",
+    "# The snippet before this takes a lot of time to compute "
+   ]
   }
  ],
  "metadata": {
